fix: Flip the overflow and ensure that only x is scrollable

--- a/.storybook/themes/commerce.scss
+++ b/.storybook/themes/commerce.scss
@@ -357,7 +357,8 @@
 				carousel-indicator-thumbnails-container: (
 					padding: var(--global-spacing-4) var(--global-spacing-3) 0 var(--global-spacing-3),
 					width: 100%,
-					overflow-y: scroll,
+					overflow-x: scroll,
+					overflow-y: hidden,
 					height: var(--global-spacing-9),
 					white-space: nowrap,
 				),
